# ChangeLog for Gentoo Linux Installer
# Copyright 2005-2005 Gentoo Technologies, Inc.

# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.571 2006/01/07 23:16:08 agaffney Exp $

*GLI-0.3 (27 Oct 2005)

  7 Jan 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIPortage.py:
  show 'Calculating dependencies for ...' in subprogress bar at beginning of
  emerge()
  src/GLIArchitectureTemplate.py:
  copy /etc/X11/gdm/gdm.conf.old into chroot if /etc/X11/gdm/gdm.conf exists
  in the chroot
  remove _quickpkg_deps() and _portage_best_{visible,version}()
  src/GLIUtility.py:
  fail immediately in validate_uri() if provided URI can't be parsed
  src/templates/x86ArchitectureTemplate.py:
  basic subprogress reporting for partitioning
  total_steps was 1 too high

  6 Jan 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIUtility.py:
  move parse_vdb_contents() to GLIPortage
  src/GLIPortage.py:
  remove all symlink fixups
  ignore 'dir' entries in CONTENTS
  call tar with -p

  5 Jan 2006; Preston Cody <codeman@gentoo.org>
  AT: bootsplash is now gensplash
  gliserv: add advanced_mode to shared_info
  webgli: Added advanced mode.  mostly just disables a few screens.
  
  2 Jan 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIPortage.py:
  get_deps() calls 'emerge -p' and then removed packages that aren't in vdb
  added emerge()
  update sub-progress after each package is emerged
  skip tar, symlink fixup, and copy from image dir to / if no files in CONTENTS
  call get_best_version_vdb() instead of get_best_version_vdb_chroot()
  remove link if it exists before moving content into place
  src/GLIArchitectureTemplate.py:
  install_packages() now calls emerge() in GLIPortage
  change all calls to self._emerge() to self._portage.emerge()
  comment out all emerge status checking...using exceptions now
  call copy_pkg_to_chroot() directly for livecd-kernel

  31 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIArchitectureTemplate.py: