@@ -1,7 +1,7 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.571 2006/01/07 23:16:08 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.572 2006/01/08 03:01:48 agaffney Exp $
 
 *GLI-0.3 (27 Oct 2005)
 
@@ -15,6 +15,7 @@
   remove _quickpkg_deps() and _portage_best_{visible,version}()
   src/GLIUtility.py:
   fail immediately in validate_uri() if provided URI can't be parsed
+  modify fetch_and_unpack_tarball() and get_uri() to allow fetch subprogress
   src/templates/x86ArchitectureTemplate.py:
   basic subprogress reporting for partitioning
   total_steps was 1 too high
